nodeport-helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-helloworld
spec:
  type: NodePort
  selector:
    app: hello-node
  ports:
    - port: 80         # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
      targetPort: 80   # Optional field.
      nodePort: 30080  # Optional field. By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
