ingress-helloworld.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-helloworld
spec:
  rules:
    - host: hello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterip-helloworld
                port:
                  number: 80
